# capitals4py

./: .env  .env.local.dev  .gitignore  Dockerfile  README.md  docker_build.ps1  docker_build_local.ps1  pyproject.toml
app/: __init__.py  containers.py  main.py  proxy.py
app/config/: __init__.py  app_setting.py
app/services/: qlib_protocol.py  qlib_service.py
capitals4py/: __init__.py  containers.py  main.py  proxy.py
capitals4py/config/: __init__.py
capitals4py/services/: qlib_service.py
env/: .env  .env.local.dev  .env.prod  .env.prod.proxy
notebooks/: test_qlib.ipynb
tests/: test_config.py  test_pyqlib.py  test_pyqlib_get_data_cn.py
